# FYS4411_Project_2

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
configs/: base.yaml  optional_part_f_neural_jastrow.yaml  part_b_1p1d_2h_bruteforce.yaml  part_b_2p2d_no_interaction_bruteforce.yaml  part_c_1p1d_2h_importance.yaml  part_c_2p2d_no_interaction_importance.yaml  part_d_blocking_bruteforce.yaml  part_d_blocking_importance.yaml  part_e_2p2d_interacting.yaml  part_e_2p2d_interacting_final.yaml  part_e_2p2d_interacting_long.yaml  part_e_blocking_interacting_final.yaml  part_e_blocking_interacting_long.yaml  sweep_hidden_units.yaml  sweep_learning_rate.yaml  sweep_part_e_hidden_units.yaml  sweep_part_e_learning_rate.yaml  sweep_part_e_time_step.yaml
docs/: experiment_log.md  implementation_notes.md  references.md
notebooks/: 00_derivation_checks.ipynb  01_rbm_sanity_checks.ipynb  02_part_b_bruteforce.ipynb  03_part_c_importance_sampling.ipynb  04_part_d_blocking.ipynb  05_part_e_interacting.ipynb  99_optional_neural_jastrow.ipynb  README.md
report/: README.md  project2_report.tex
results/: README.md
scripts/: make_figures.py  make_tables.py  reproduce_selected_results.py  run_blocking.py  run_experiment.py  run_sweep.py
tests/: conftest.py  test_blocking.py  test_gaussian_binary_rbm.py  test_gradient_estimator.py  test_harmonic_oscillator_energy.py  test_importance_sampling.py  test_interaction_potential.py  test_local_energy.py  test_metropolis.py  test_quantum_force.py  test_rbm_derivatives.py  test_reproducibility.py  (+1 more)
(+116 files in other folders)
