[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nqs-vmc"
version = "0.1.0"
description = "Neural quantum state variational Monte Carlo solver for FYS4411 Project 2"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pyyaml",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.pytest.ini_options]
pythonpath = ["code"]
testpaths = ["tests"]
